--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "test:integration-fix": "npm run build; jest --roots=./tests --update-snapshot"
   },
   "dependencies": {
+    "compare-versions": "^4.1.3",
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
     "jest": "^26.6.3",
