--- a/manifests/overlays/dev/kustomization.yaml
+++ b/manifests/overlays/dev/kustomization.yaml
@@ -1,10 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+bases:
+  - ../authentication
 resources:
-- ./nvidia-dcgm-mock-exporter
-- ../authentication
-namespace: opendatahub
-images:
-- name: quay.io/opendatahub/odh-dashboard
-  newName: quay.io/mroman_redhat/odh-dashboard
-  newTag: dev-1
+  - ./nvidia-dcgm-mock-exporter
