Add role change and fix availability check

--- a/manifests/base/cluster-role.yaml
+++ b/manifests/base/cluster-role.yaml
@@ -5,6 +5,16 @@ metadata:
 rules:
   - verbs:
       - get
+      - list
+    apiGroups:
+      - ''
+      - machine.openshift.io
+      - autoscaling.openshift.io
+    resources:
+      - machineautoscalers
+      - machinesets
+  - verbs:
+      - get
       - watch
       - list
     apiGroups:
