--- a/.github/workflows/quay-tag.yml
+++ b/.github/workflows/quay-tag.yml
@@ -11,6 +11,12 @@ jobs:
       - uses: actions/checkout@v3
       - run: sudo apt-get -y update
       - run: sudo apt-get -y install podman
-      - run: #Add login command
-      - run: tag=$(git describe --tags)
-      - run: podman tag quay.io/opendatahub/odh-dashboard:latest quay.io/opendatahub/odh-dashboard:${tag}
+      - shell: bash
+        env:
+          QUAY_TOKEN: ${{ secrets.QUAY_ROBOT_TOKEN }}
+        run: |
+         podman login quay.io -u mroman_redhat+odh_dashboard -p ${QUAY_TOKEN}
+      - run: export tag=$(git describe --tags)
+      - run: export hash=$(git rev-parse --short HEAD)
+      - run: podman tag quay.io/opendatahub/odh-dashboard:main-${hash} quay.io/opendatahub/odh-dashboard:${tag}
+
