use env for tag and hash

--- a/.github/workflows/quay-tag.yml
+++ b/.github/workflows/quay-tag.yml
@@ -16,7 +16,10 @@ jobs:
           QUAY_TOKEN: ${{ secrets.QUAY_ROBOT_TOKEN }}
         run: |
          podman login quay.io -u mroman_redhat+odh_dashboard -p ${QUAY_TOKEN}
-      - run: export tag=$(git describe --tags)
-      - run: export hash=$(git rev-parse --short HEAD)
-      - run: podman tag quay.io/opendatahub/odh-dashboard:main-${hash} quay.io/opendatahub/odh-dashboard:${tag}
+      - shell: bash
+        env:
+          TAG: $(git describe --tags)
+          HASH: $(git rev-parse --short HEAD)
+        run: |
+         podman tag quay.io/opendatahub/odh-dashboard:main-${HASH} quay.io/opendatahub/odh-dashboard:${TAG}
 
