--- a/manifests/crd/odhdocuments.dashboard.opendatahub.io.crd.yaml
+++ b/manifests/crd/odhdocuments.dashboard.opendatahub.io.crd.yaml
@@ -17,7 +17,7 @@ spec:
     - name: v1
       schema:
         openAPIV3Schema:
-          description: This is a test description change
+          description: OdhDocument is the Schema for the odhdocuments
             API
           properties:
             apiVersion:
