Test dispatch trigger

--- a/manifests/crd/odhdocuments.dashboard.opendatahub.io.crd.yaml
+++ b/manifests/crd/odhdocuments.dashboard.opendatahub.io.crd.yaml
@@ -17,7 +17,7 @@ spec:
     - name: v1
       schema:
         openAPIV3Schema:
-          description: OdhDocument is the Schema for the odhdocuments
+          description: Trigger dispatch test
             API
           properties:
             apiVersion:
