--- a/.github/workflows/dispatch_on_crd_change.yaml
+++ b/.github/workflows/dispatch_on_crd_change.yaml
@@ -5,8 +5,9 @@ on:
     types: 
     - closed
     branches: 
-    - main
-
+    - 'main'
+    paths: 
+    - 'manifests/crd/**'
 
 jobs:
   operator-sync:
